Fix layout issues in firefox

--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -43,10 +43,12 @@ h2 {
 }
 button {
   background-color: #f8fbfb;
+  border: none;
 }
 
 .button {
   padding: 5px 10px;
+  cursor: pointer;
 }
 
 .button--create {
